2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* CairoSurface.xs
	* t/CairoSurface.t: Wrap cairo_surface_copy_page and
	cairo_surface_show_page.

	* Makefile.PL
	* CairoSurface.xs
	* t/CairoSurface.t: Wrap cairo_ps_surface_restrict_to_level,
	cairo_ps_get_levels, and cairo_ps_level_to_string.

2007-12-29  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.xs
	* CairoFont.xs
	* CairoMatrix.xs
	* CairoSurface.xs: Use perl's New*/Safefree facilities instead of
	calloc/malloc/free as the latter aren't safe on some platforms,
	notably Win32.  Patch by T.J. Ferraro.

	* t/CairoSurface.t: Mark the isa_ok test for PDF surfaces returned
	by create_similar() as TODO, since the returned surface's type is
	not reliable at this point.

2007-11-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS: Unstable release 1.050.

2007-11-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm: Add entries for the various surfaces to the API
	listing.

	* Makefile.PL: Update the list of exported symbols.  (Reported by
	spicy jack)

2007-10-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/CairoFont.t: Really don't use the hash-ref variant of the
	constant pragma this time.

	* Cairo.pm
	* Cairo.xs
	* CairoFt.xs
	* Makefile.PL
	* cairo-perl.h
	* cairo-perl.typemap
	* examples/freetype-font.pl
	* t/CairoFt.t: Add support for part of cairo's FreeType
	integration API.  Currently, that's just
	Cairo::FtFontFace::create, which lets you create a cairo font face
	from a FreeType font face.

2007-10-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/Cairo.t
	* t/CairoPattern.t: When Test::Number::Delta is not available,
	skip the relevant tests instead of faking passes.  (Suggested by
	Aristotle Pagaltzis)

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/Cairo.t
	* t/CairoFont.t
	* t/CairoPath.t
	* t/CairoPattern.t
	* t/CairoSurface.t: Don't use the hash-ref variant of the constant
	pragma.  It's not supported by the version that ships with perl
	5.6.
